name:                humblr

version:             0.3.0.0

synopsis:            Haskell wrapper for the Tumblr API

homepage:            https://github.com/Taneb/humblr

license:             BSD3

license-file:        LICENSE

author:              Nathan "Taneb" van Doorn, Marcel Ruegenberg

maintainer:          nvd1234@gmail.com

category:            Web

build-type:          Simple

cabal-version:       >=1.8


library
  exposed-modules:     Web.Tumblr
                     , Web.Tumblr.Types
  
  other-modules:       Web.Tumblr.Helpers
  
  build-depends:       base >=4.5
                     , mtl >=2.0
                     , aeson ==0.6.*
                     , attoparsec ==0.10.*
                     , bytestring >=0.9
                     , conduit >= 1.0.5
                     , attoparsec-conduit >= 1.0.0
                     , http-conduit >=2.0
                     , http-types >= 0.7
                     , authenticate-oauth ==1.4.*
                     , time >= 1.4
                     , old-locale >= 1.0
                     , unordered-containers >= 0.2
                     , process
  
  hs-source-dirs:      src
  
executable Humblr-test
  main-is:             Main.hs
  build-depends:       base >=4.5
                     , mtl >=2.0
                     , resourcet
                     , http-conduit >=2.0
                     , http-client >= 0.2
                     , bytestring >=0.9
                     , authenticate-oauth ==1.4.*                    
                     , humblr